--- a/src/web/firstLaunch/index.html
+++ b/src/web/firstLaunch/index.html
@@ -3,9 +3,12 @@
 <html>
     <head>
         <title>Celestial Compass - First Launch</title>
+
+        <script src="libs://locals.js"></script>
+        <script src="libs://locals.js"></script>
     </head>
 
     <body>
-        Hi
+        <local path="core/firstlaunch" key="welcome" />
     </body>
 </html>
