Updated UI namespace
* Updated library importing system
+ Added node importer UI option
+ Added destroy on close option
- Removed nodefix.js

--- a/src/web/firstLaunch/index.html
+++ b/src/web/firstLaunch/index.html
@@ -4,8 +4,7 @@
     <head>
         <title>Celestial Compass - First Launch</title>
 
-        <script src="libs://locals.js"></script>
-        <script src="libs://locals.js"></script>
+        <script lib src="locals.js"></script>
     </head>
 
     <body>
