Improved node importer
* Changed the importer to run on jQuery ready
+ Added proper flags for using default export and script tags
+ Added global scope importing function

--- a/src/web/firstLaunch/index.html
+++ b/src/web/firstLaunch/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Celestial Compass - First Launch</title>
 
+        <script lib data="default" src="config.js" as="config"></script>
         <script lib src="locals.js"></script>
     </head>
 
