--- a/src/web/firstLaunch/index.html
+++ b/src/web/firstLaunch/index.html
@@ -8,13 +8,13 @@
         <link rel="stylesheet" href="styles://themes/blue.css" />
         <link rel="stylesheet" href="styles://themes/light.css" />
 
-        <script lib src="config.js" as="config"></script>
-        <script lib src="theme.js" as="themey"></script>
-        <script lib src="locals.js"></script>
+        <script data="" lib="config.js" as="config"></script>
+        <script lib="theme.js" as="theme"></script>
     </head>
 
     <body>
-        <div style="display: none" class="vheight-100 align-center">
+        <!--div style="display: none" class="vheight-100 align-center">
+        <script lib src="locals.js" as="locals"></script>
             <div class="vcenter-self width-100">
                 <h4><local key="step0_title" /></h4>
                 <span class="text-24"><local key="step0" /></span>
@@ -24,13 +24,17 @@
         <div class="fixed bottom width-100 theme-component-bg theme-text-bold text-24 vpadding-10">
             <span class="float-right right-padding-20">Skip Step</span>
             <span class="float-left left-padding-20">Back</span>
-        </div>
-
         <script>
             const $ = require("jquery");
-            window.addEventListener("loaded-locals", function() {
+            window.addEventListener("loaded-locals", function () {
                 setTimeout(() => $("div").fadeIn(1000), 1069)
             });
         </script>
+        </div-->
+
+        <div id="root"></div>
+        <script src="main.js"></script>
+        <script type="module" src="test.mjs"></script>
+        <a href="test.html"></a>
     </body>
 </html>
